<resources>
    <string name="app_name">Friend Chat</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="friends">Friends</string>
    <string name="discover">Discover People</string>
    <string name="request">Friends Request</string>
    <string name="favorites">Favorite Friends</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="feedback">Feedback</string>
    <string name="about">About</string>
    <string name="action_sign_out">Sign out</string>
    <string name="background">Background</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="active_status">Active Status</string>
    <string name="done">Done</string>
    <string name="home">Home</string>
    <string name="favorite">Favorites</string>
    <string name="action_share">Share</string>
    <string name="logo_icon">Logo Icon</string>
    <string name="app_version">Version 1.0</string>
    <string name="developed_by">Developed By: Mohamed Riad</string>
    <string name="friend_profile_image">Friend Profile Image</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="create_account">Create Account</string>
    <string name="add_friend">Add Friend</string>
    <string name="favorite_friend">Favorite Friend</string>
    <string name="location_icon">Location Icon</string>
    <string name="camera_icon">Camera Icon</string>
    <string name="type_a_message_hint">Type a message…</string>
    <string name="send_message">Send Message</string>
    <string name="save">SAVE</string>
    <string name="friend_status">Friend Status</string>
    <string name="open_camera">Open Camera</string>
    <string name="open_gallery">Open Gallery</string>
    <string name="image_message">Image Message</string>
    <string name="other_friend_image">Other Friend Image</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="error_open_activity">Unable to open activity.</string>
    <string name="sign_in_cancelled">Sign-in cancelled.</string>
    <string name="no_connection">No Internet Connection.</string>
    <string name="sign_in_error">Sign-in error:</string>
    <string name="fail_to_send_email">Failed to send verification email.</string>
    <string name="email_error">Enter your email address</string>
    <string name="password_error">Enter your password</string>
    <string name="email_not_verified">The email is not verified.</string>
    <string name="share_subject">Friend Chat Android Application</string>
    <string name="share_text">Url of the application on google play store or google drive.</string>
    <string name="developer_email">mohamed.14.riad@gmail.com</string>
    <string name="feedback_subject">Friend Chat Feedback</string>
    <string name="send_mail">Send Mail..</string>
    <string name="download_error">Getting download url was not successful.</string>
    <string name="image_picker">Image Picker</string>
    <string name="pick_image">Pick Image using</string>
    <string name="select_image">Select Image using</string>
    <string name="camera_permission">You can not open camera without allowing permission.</string>
    <string name="gallery_permission">You can not open gallery without allowing permissions.</string>
    <string name="appwidget_text">Favorite Friends</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="uploading_message">Uploading:</string>
    <string name="udpate_message">Updating Profile…</string>
    <string name="cursor_error">Error : Close Cursor</string>

    <string name="default_notification_channel_id">MyNotifications</string>
    <string name="default_notification_channel_name">FCM Push Notifications</string>
</resources>
