<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ProfileFragment">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/profile_background"
                android:contentDescription="@string/background"
                android:src="@drawable/side_nav_bar" />

            <FrameLayout
                android:layout_width="@dimen/profile_image"
                android:layout_height="@dimen/profile_image"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="-100dp">

                <ImageView
                    android:id="@+id/profile_picture"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:contentDescription="@string/profile_picture"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_profile" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:contentDescription="@string/camera_icon"
                    android:src="@drawable/ic_menu_camera" />

            </FrameLayout>

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/status_switch"
                android:layout_width="@dimen/switch_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/large_margin"
                android:checked="true"
                android:text="@string/active_status"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textColor="@color/colorAccent"
                android:theme="@style/CustomSwitch" />

            <Button
                android:id="@+id/saveProfileInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:gravity="center"
                android:text="@string/save"
                android:textAllCaps="false"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorWhite"
                android:theme="@style/CustomButton" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</FrameLayout>