<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/medium_padding"
    android:layout_marginTop="@dimen/medium_padding"
    android:background="@drawable/background_selector"
    android:clickable="true"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:focusable="true">

    <FrameLayout
        android:layout_width="@dimen/profile_image_dimen"
        android:layout_height="@dimen/profile_image_dimen"
        android:layout_marginStart="@dimen/medium_padding"
        android:gravity="center">

        <ImageView
            android:id="@+id/itemFriendImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/friend_profile_image" />

        <ImageView
            android:id="@+id/itemFriendStatus"
            android:layout_width="@dimen/activity_horizontal_margin"
            android:layout_height="@dimen/activity_vertical_margin"
            android:layout_gravity="bottom|end"
            android:contentDescription="@string/friend_status" />

    </FrameLayout>

    <android.support.v4.widget.Space
        android:layout_width="@dimen/activity_horizontal_margin"
        android:layout_height="@dimen/profile_image_dimen" />

    <TextView
        android:id="@+id/itemFriendName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginEnd="@dimen/medium_padding"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorBlack" />

    <ImageButton
        android:id="@+id/itemFriendFavorite"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="@dimen/add_icon_dimen"
        android:layout_height="@dimen/add_icon_dimen"
        android:layout_marginEnd="@dimen/medium_padding"
        android:contentDescription="@string/favorite_friend" />

</LinearLayout>