<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/medium_padding"
    android:background="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:orientation="horizontal"
    android:focusable="true">

    <ImageView
        android:id="@+id/itemRequestImage"
        android:layout_width="@dimen/request_image_dimen"
        android:layout_height="match_parent"
        android:contentDescription="@string/friend_profile_image" />

    <android.support.v4.widget.Space
        android:layout_width="@dimen/activity_horizontal_margin"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/medium_padding"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/itemRequestName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:paddingEnd="@dimen/medium_padding"
            android:paddingStart="@dimen/medium_padding"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorBlack" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/itemRequestAccept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="@dimen/medium_padding"
                android:text="@string/accept"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textColor="@color/colorWhite"
                android:theme="@style/CustomButton" />

            <Button
                android:id="@+id/itemRequestDecline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="@dimen/medium_padding"
                android:text="@string/decline"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textColor="@color/colorWhite"
                android:theme="@style/CustomButton" />

        </FrameLayout>

    </LinearLayout>

</LinearLayout>